--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ body {
   justify-content: center;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 header {
   text-align: center;
 }
@@ -33,10 +39,20 @@ section.game-status {
   background-color: #10a95b;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  max-width: 350px;
   align-items: center;
   color: #f9f4da;
   border-radius: 4px;
   margin-block: 30px;
+}
+
+section.game-status.won {
+  background-color: #10a95b;
+}
+
+section.game-status.lost {
+  background-color: #ba2a2a;
 }
 
 section.game-status > p {
@@ -54,12 +70,28 @@ section.language-chips {
   gap: 5px;
   justify-content: center;
   max-width: 350px;
-  margin-bottom: 36px;
+  margin: 0 auto 36px;
 }
 
 span.chip {
   border-radius: 3px;
   padding: 4.5px;
+  position: relative;
+}
+
+/* Dimmed overlay with skull on "lost" languages */
+span.chip.lost::before {
+  content: "💀";
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  font-size: 0.85rem;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 section.word {
@@ -118,16 +150,8 @@ button.new-game {
   cursor: pointer;
 }
 
-span.chip.lost::before {
-  content: "💀";
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  font-size: 0.85rem;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+main {
+  border: 3px solid white;
+  padding: 20px;
+  border-radius: 15px;
 }
