--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ section.game-status {
   display: flex;
   flex-direction: column;
   width: 100%;
+  justify-content: center;
   max-width: 350px;
   align-items: center;
   color: #f9f4da;
@@ -53,6 +54,16 @@ section.game-status.won {
 
 section.game-status.lost {
   background-color: #ba2a2a;
+}
+
+section.game-status.farewell {
+  background-color: #7a5ea7;
+  border: 1px dashed #323232;
+}
+
+section.game-status > p.farewell-message {
+  font-style: italic;
+  font-weight: 400;
 }
 
 section.game-status > p {
@@ -130,6 +141,11 @@ section.keyboard > button {
   cursor: pointer;
 }
 
+section.keyboard > button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 section.keyboard > button.correct {
   background-color: #10a95b;
 }
@@ -154,4 +170,16 @@ main {
   border: 3px solid white;
   padding: 20px;
   border-radius: 15px;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
